// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migrate ledger storage v1 to storage v2 1`] = `
Array [
  Object {
    "Bip44Account": Array [
      Object {
        "Bip44AccountId": 1,
        "KeyDerivationId": 4,
      },
    ],
  },
  Object {
    "Bip44Chain": Array [
      Object {
        "Bip44ChainId": 1,
        "DisplayCutoff": 77,
        "KeyDerivationId": 5,
      },
      Object {
        "Bip44ChainId": 2,
        "DisplayCutoff": null,
        "KeyDerivationId": 26,
      },
    ],
  },
  Object {
    "Bip44CoinType": Array [
      Object {
        "Bip44CoinTypeId": 1,
        "KeyDerivationId": 3,
      },
    ],
  },
  Object {
    "Bip44Purpose": Array [
      Object {
        "Bip44PurposeId": 1,
        "KeyDerivationId": 2,
      },
    ],
  },
  Object {
    "Bip44Root": Array [
      Object {
        "Bip44RootId": 1,
        "KeyDerivationId": 1,
      },
    ],
  },
  Object {
    "Bip44Wrapper": Array [
      Object {
        "Bip44WrapperId": 1,
        "ConceptualWalletId": 1,
        "IsBundled": false,
        "PublicDeriverLevel": 3,
        "SignerLevel": 0,
        "Version": 2,
      },
    ],
  },
  Object {
    "ConceptualWallet": Array [
      Object {
        "CoinType": 2147485463,
        "ConceptualWalletId": 1,
        "Name": "Yoroi-Ledger",
      },
    ],
  },
  Object {
    "HwWalletMeta": Array [
      Object {
        "ConceptualWalletId": 1,
        "DeviceId": "",
        "HwWalletMetaId": 1,
        "Label": "",
        "Language": "",
        "MajorVersion": 1,
        "MinorVersion": 0,
        "Model": "",
        "PatchVersion": 0,
        "Vendor": "ledger.com",
      },
    ],
  },
  Object {
    "Key": Array [
      Object {
        "Hash": "76bca341ea86128125b49999ea1799fcd0d005a64b9150c33ed4648a3c11b20c26ea85882a1616bbf4ffae3fae6debe77169a3b299ec226409e2def1bffd35a9",
        "IsEncrypted": false,
        "KeyId": 1,
        "PasswordLastUpdate": null,
      },
    ],
  },
  Object {
    "KeyDerivation": Array [
      Object {
        "Index": null,
        "KeyDerivationId": 1,
        "Parent": null,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2147483692,
        "KeyDerivationId": 2,
        "Parent": 1,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2147485463,
        "KeyDerivationId": 3,
        "Parent": 2,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2147483648,
        "KeyDerivationId": 4,
        "Parent": 3,
        "PrivateKeyId": null,
        "PublicKeyId": 1,
      },
      Object {
        "Index": 0,
        "KeyDerivationId": 5,
        "Parent": 4,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 0,
        "KeyDerivationId": 6,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 1,
        "KeyDerivationId": 7,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2,
        "KeyDerivationId": 8,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 3,
        "KeyDerivationId": 9,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 4,
        "KeyDerivationId": 10,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 5,
        "KeyDerivationId": 11,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 6,
        "KeyDerivationId": 12,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 7,
        "KeyDerivationId": 13,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 8,
        "KeyDerivationId": 14,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 9,
        "KeyDerivationId": 15,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 10,
        "KeyDerivationId": 16,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 11,
        "KeyDerivationId": 17,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 12,
        "KeyDerivationId": 18,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 13,
        "KeyDerivationId": 19,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 14,
        "KeyDerivationId": 20,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 15,
        "KeyDerivationId": 21,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 16,
        "KeyDerivationId": 22,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 17,
        "KeyDerivationId": 23,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 18,
        "KeyDerivationId": 24,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 19,
        "KeyDerivationId": 25,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 1,
        "KeyDerivationId": 26,
        "Parent": 4,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 0,
        "KeyDerivationId": 27,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 1,
        "KeyDerivationId": 28,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2,
        "KeyDerivationId": 29,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 3,
        "KeyDerivationId": 30,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 4,
        "KeyDerivationId": 31,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 5,
        "KeyDerivationId": 32,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 6,
        "KeyDerivationId": 33,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 7,
        "KeyDerivationId": 34,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 8,
        "KeyDerivationId": 35,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 9,
        "KeyDerivationId": 36,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 10,
        "KeyDerivationId": 37,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 11,
        "KeyDerivationId": 38,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 12,
        "KeyDerivationId": 39,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 13,
        "KeyDerivationId": 40,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 14,
        "KeyDerivationId": 41,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 15,
        "KeyDerivationId": 42,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 16,
        "KeyDerivationId": 43,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 17,
        "KeyDerivationId": 44,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 18,
        "KeyDerivationId": 45,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 19,
        "KeyDerivationId": 46,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
    ],
  },
]
`;

exports[`Migrate memory storage v1 to storage v2 1`] = `
Array [
  Object {
    "Bip44Account": Array [
      Object {
        "Bip44AccountId": 1,
        "KeyDerivationId": 4,
      },
    ],
  },
  Object {
    "Bip44Chain": Array [
      Object {
        "Bip44ChainId": 1,
        "DisplayCutoff": 142,
        "KeyDerivationId": 5,
      },
      Object {
        "Bip44ChainId": 2,
        "DisplayCutoff": null,
        "KeyDerivationId": 26,
      },
    ],
  },
  Object {
    "Bip44CoinType": Array [
      Object {
        "Bip44CoinTypeId": 1,
        "KeyDerivationId": 3,
      },
    ],
  },
  Object {
    "Bip44Purpose": Array [
      Object {
        "Bip44PurposeId": 1,
        "KeyDerivationId": 2,
      },
    ],
  },
  Object {
    "Bip44Root": Array [
      Object {
        "Bip44RootId": 1,
        "KeyDerivationId": 1,
      },
    ],
  },
  Object {
    "Bip44Wrapper": Array [
      Object {
        "Bip44WrapperId": 1,
        "ConceptualWalletId": 1,
        "IsBundled": false,
        "PublicDeriverLevel": 3,
        "SignerLevel": 0,
        "Version": 2,
      },
    ],
  },
  Object {
    "ConceptualWallet": Array [
      Object {
        "CoinType": 2147485463,
        "ConceptualWalletId": 1,
        "Name": "Wallet",
      },
    ],
  },
  Object {
    "HwWalletMeta": Array [],
  },
  Object {
    "Key": Array [
      Object {
        "Hash": "a4f667dd7dd4e242fdc082540f24996a54227f6bbf0e77f735fc192fca4dbe8fcad69edddcd0ab1c5d1db62717c6b733fba5f19bcf4cda7a17770408342c4eb25373ab7e47678ab20ad428301a39324a0f789f10901ce41a128b466568f863b9b7baa989aaf09ec746615ea2400430dadec18ada015841107bd2133dc3b2af107ecea49c1b345bdb51ebda9fed6ebe6546efa20524d2dcc66c8a5605",
        "IsEncrypted": true,
        "KeyId": 1,
        "PasswordLastUpdate": 2019-07-31T10:40:16.000Z,
      },
      Object {
        "Hash": "b2938f29eb965952b03baaf010b0f5fe4a2c116a1e255274c9ace24deb72450ce1c045821c42ed11b33db3124b1551793e76b8ad187efb92b28969b92bb95964",
        "IsEncrypted": false,
        "KeyId": 2,
        "PasswordLastUpdate": null,
      },
    ],
  },
  Object {
    "KeyDerivation": Array [
      Object {
        "Index": null,
        "KeyDerivationId": 1,
        "Parent": null,
        "PrivateKeyId": 1,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2147483692,
        "KeyDerivationId": 2,
        "Parent": 1,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2147485463,
        "KeyDerivationId": 3,
        "Parent": 2,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2147483648,
        "KeyDerivationId": 4,
        "Parent": 3,
        "PrivateKeyId": null,
        "PublicKeyId": 2,
      },
      Object {
        "Index": 0,
        "KeyDerivationId": 5,
        "Parent": 4,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 0,
        "KeyDerivationId": 6,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 1,
        "KeyDerivationId": 7,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2,
        "KeyDerivationId": 8,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 3,
        "KeyDerivationId": 9,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 4,
        "KeyDerivationId": 10,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 5,
        "KeyDerivationId": 11,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 6,
        "KeyDerivationId": 12,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 7,
        "KeyDerivationId": 13,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 8,
        "KeyDerivationId": 14,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 9,
        "KeyDerivationId": 15,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 10,
        "KeyDerivationId": 16,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 11,
        "KeyDerivationId": 17,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 12,
        "KeyDerivationId": 18,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 13,
        "KeyDerivationId": 19,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 14,
        "KeyDerivationId": 20,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 15,
        "KeyDerivationId": 21,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 16,
        "KeyDerivationId": 22,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 17,
        "KeyDerivationId": 23,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 18,
        "KeyDerivationId": 24,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 19,
        "KeyDerivationId": 25,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 1,
        "KeyDerivationId": 26,
        "Parent": 4,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 0,
        "KeyDerivationId": 27,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 1,
        "KeyDerivationId": 28,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2,
        "KeyDerivationId": 29,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 3,
        "KeyDerivationId": 30,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 4,
        "KeyDerivationId": 31,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 5,
        "KeyDerivationId": 32,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 6,
        "KeyDerivationId": 33,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 7,
        "KeyDerivationId": 34,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 8,
        "KeyDerivationId": 35,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 9,
        "KeyDerivationId": 36,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 10,
        "KeyDerivationId": 37,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 11,
        "KeyDerivationId": 38,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 12,
        "KeyDerivationId": 39,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 13,
        "KeyDerivationId": 40,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 14,
        "KeyDerivationId": 41,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 15,
        "KeyDerivationId": 42,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 16,
        "KeyDerivationId": 43,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 17,
        "KeyDerivationId": 44,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 18,
        "KeyDerivationId": 45,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 19,
        "KeyDerivationId": 46,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
    ],
  },
]
`;

exports[`Migrate trezor storage v1 to storage v2 1`] = `
Array [
  Object {
    "Bip44Account": Array [
      Object {
        "Bip44AccountId": 1,
        "KeyDerivationId": 4,
      },
    ],
  },
  Object {
    "Bip44Chain": Array [
      Object {
        "Bip44ChainId": 1,
        "DisplayCutoff": 61,
        "KeyDerivationId": 5,
      },
      Object {
        "Bip44ChainId": 2,
        "DisplayCutoff": null,
        "KeyDerivationId": 26,
      },
    ],
  },
  Object {
    "Bip44CoinType": Array [
      Object {
        "Bip44CoinTypeId": 1,
        "KeyDerivationId": 3,
      },
    ],
  },
  Object {
    "Bip44Purpose": Array [
      Object {
        "Bip44PurposeId": 1,
        "KeyDerivationId": 2,
      },
    ],
  },
  Object {
    "Bip44Root": Array [
      Object {
        "Bip44RootId": 1,
        "KeyDerivationId": 1,
      },
    ],
  },
  Object {
    "Bip44Wrapper": Array [
      Object {
        "Bip44WrapperId": 1,
        "ConceptualWalletId": 1,
        "IsBundled": false,
        "PublicDeriverLevel": 3,
        "SignerLevel": 0,
        "Version": 2,
      },
    ],
  },
  Object {
    "ConceptualWallet": Array [
      Object {
        "CoinType": 2147485463,
        "ConceptualWalletId": 1,
        "Name": "Trezorro",
      },
    ],
  },
  Object {
    "HwWalletMeta": Array [
      Object {
        "ConceptualWalletId": 1,
        "DeviceId": "Trezorro",
        "HwWalletMetaId": 1,
        "Label": "C875BA9D0C571FF4B8718FAA",
        "Language": "english",
        "MajorVersion": 2,
        "MinorVersion": 1,
        "Model": "T",
        "PatchVersion": 1,
        "Vendor": "trezor.io",
      },
    ],
  },
  Object {
    "Key": Array [
      Object {
        "Hash": "bc772da2ba5a37bad47f51d6a4476b236aa6734b5cd79c81706d5018d3203f6c05d510314991bfd73c2a3e9da72d2e1205b54cf6342f588a4fbbaaa98e58211b",
        "IsEncrypted": false,
        "KeyId": 1,
        "PasswordLastUpdate": null,
      },
    ],
  },
  Object {
    "KeyDerivation": Array [
      Object {
        "Index": null,
        "KeyDerivationId": 1,
        "Parent": null,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2147483692,
        "KeyDerivationId": 2,
        "Parent": 1,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2147485463,
        "KeyDerivationId": 3,
        "Parent": 2,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2147483648,
        "KeyDerivationId": 4,
        "Parent": 3,
        "PrivateKeyId": null,
        "PublicKeyId": 1,
      },
      Object {
        "Index": 0,
        "KeyDerivationId": 5,
        "Parent": 4,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 0,
        "KeyDerivationId": 6,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 1,
        "KeyDerivationId": 7,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2,
        "KeyDerivationId": 8,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 3,
        "KeyDerivationId": 9,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 4,
        "KeyDerivationId": 10,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 5,
        "KeyDerivationId": 11,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 6,
        "KeyDerivationId": 12,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 7,
        "KeyDerivationId": 13,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 8,
        "KeyDerivationId": 14,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 9,
        "KeyDerivationId": 15,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 10,
        "KeyDerivationId": 16,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 11,
        "KeyDerivationId": 17,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 12,
        "KeyDerivationId": 18,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 13,
        "KeyDerivationId": 19,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 14,
        "KeyDerivationId": 20,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 15,
        "KeyDerivationId": 21,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 16,
        "KeyDerivationId": 22,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 17,
        "KeyDerivationId": 23,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 18,
        "KeyDerivationId": 24,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 19,
        "KeyDerivationId": 25,
        "Parent": 5,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 1,
        "KeyDerivationId": 26,
        "Parent": 4,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 0,
        "KeyDerivationId": 27,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 1,
        "KeyDerivationId": 28,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 2,
        "KeyDerivationId": 29,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 3,
        "KeyDerivationId": 30,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 4,
        "KeyDerivationId": 31,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 5,
        "KeyDerivationId": 32,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 6,
        "KeyDerivationId": 33,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 7,
        "KeyDerivationId": 34,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 8,
        "KeyDerivationId": 35,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 9,
        "KeyDerivationId": 36,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 10,
        "KeyDerivationId": 37,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 11,
        "KeyDerivationId": 38,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 12,
        "KeyDerivationId": 39,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 13,
        "KeyDerivationId": 40,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 14,
        "KeyDerivationId": 41,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 15,
        "KeyDerivationId": 42,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 16,
        "KeyDerivationId": 43,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 17,
        "KeyDerivationId": 44,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 18,
        "KeyDerivationId": 45,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
      Object {
        "Index": 19,
        "KeyDerivationId": 46,
        "Parent": 26,
        "PrivateKeyId": null,
        "PublicKeyId": null,
      },
    ],
  },
]
`;
